apps/prod/rbx-public-presence/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-public-presence
spec:
  redirectScheme:
    scheme: https
    permanent: true
