apps/prod/rbx-public-presence/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rbx-public-presence
  labels:
    app.kubernetes.io/part-of: rbx-public-presence
