apps/prod/rbx-public-presence/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-public-presence-web
  namespace: rbx-public-presence
  labels:
    app.kubernetes.io/name: rbx-public-presence-web
spec:
  selector:
    app.kubernetes.io/name: rbx-public-presence-web
  ports:
    - port: 80
      targetPort: http
      name: http
